@@ -19,9 +19,12 @@
   <!-- Libraries directory for the build process -->
   <property name="libDir"  location="lib"/>
   
-  <!-- Libraries directory for the build process -->
+  <!-- Extensions directory for the build process -->
   <property name="extDir"  location="lib/ext"/>
-  
+
+  <!-- Documentation directory -->
+  <property name="docDir"  location="doc"/>
+	  
   
   <!-- Use the new 1.3+ compiler -->
   <property name="build.compiler"  value="modern"/>
@@ -39,7 +42,7 @@
   
   
   <!-- tools.jar path -->
-  <path id="tools.jar" location="bin/tools14.jar"/>
+  <path id="tools.jar.path" location="bin/tools14.jar"/>
   
   <!-- The build CLASSPATH -->
   <path id="build.class.path">
@@ -50,23 +53,32 @@
   <!-- The run CLASSPATH -->
   <path id="run.class.path">
     <pathelement location="${buildDir}/gate.jar"/>
-    <path refid="tools.jar"/>
+    <path refid="tools.jar.path"/>
   </path>
   
   <!-- Prints out some information messages -->
   <echo level="info">
-    This is the ANT build script for gate (http://gate.ac.uk).
-    The following targets are available
-      -compile: compiles all the .java files
-      -resources: copies the resources to the output directory (${outputDir})
-      -jar: creates the gate.jar archive
-      -run: starts GATE
-      -clean: cleans up the output from all previous builds
-      -guk: compiles the GUK classes and builds the guk.jar archive
-      -gukdemo: starts the GUK Editor (a.k.a. GATE Unicode Editor)
-      
-      -all (default target): compiles GUK and GATE classes and makes the gate.jar archive.
+    This is the ANT build script for GATE (http://gate.ac.uk).
+    Type &quot;ant help&quot; for details about the targets available
   </echo>
+  
+  <!-- Prints out details about the targets -->
+  <target name="help">
+    <echo level="info">
+      This is the ANT build script for gate (http://gate.ac.uk).
+      The following targets are available
+        -compile: compiles all the .java files
+        -resources: copies the resources to the output directory (${outputDir})
+        -jar: creates the gate.jar archive
+        -run: starts GATE
+        -clean: cleans up the output from all previous builds
+        -guk: compiles the GUK classes and builds the guk.jar archive
+        -gukdemo: starts the GUK Editor (a.k.a. GATE Unicode Editor)
+        -test: runs the GATE test suite
+        
+        -all (default target): compiles GUK and GATE classes and makes the gate.jar archive.
+    </echo>
+  </target>
   
 	<!-- Copies resources to the output directory -->
   <target name="resources">
@@ -155,5 +167,54 @@
     </delete>
   </target>
   
+  <!-- Make documentation -->
+  <target name="doc">
+    <javadoc access="protected" 
+              destdir="${docDir}/javadoc"
+              classpathref="run.class.path"
+              Extdirs="${extDir}"
+              Encoding="UTF-8"
+              Use="yes"
+              Windowtitle="GATE JavaDoc"
+              link="http://java.sun.com/j2se/1.4.2/docs/api/"
+              docencoding="UTF-8"
+              charset="UTF-8"
+              source="1.4"
+              breakiterator="true">
+      <fileset dir="${srcDir}"/>        
+    </javadoc>
+  </target>
+  
+  <!-- Make documentation -->
+  <target name="internaldoc">
+    <javadoc access="private" 
+              destdir="${docDir}/javadoc/internal"
+              classpathref="run.class.path"
+              Extdirs="${extDir}"
+              Encoding="UTF-8"
+              Use="yes"
+              Windowtitle="GATE JavaDoc"
+              link="http://java.sun.com/j2se/1.4.2/docs/api/"
+              docencoding="UTF-8"
+              charset="UTF-8"
+              source="1.4"
+              breakiterator="true">
+      <fileset dir="${srcDir}"/>        
+    </javadoc>
+  </target>
+
+  
+  <target name="test" depends="jar">
+    <junit fork="true" 
+           showoutput="yes"
+           printsummary="yes">
+      <classpath refid="run.class.path"/>
+      <sysproperty key="gate.config" value="${buildDir}/gate.xml"/>
+      <jvmarg value="-Djava.ext.dirs=${extDir}"/>
+      <formatter type="plain"
+                 usefile="false"/>
+      <test name="gate.TestGate"/>
+    </junit>
+  </target>
   
 </project>
